# nlp-domain-alignment

./: .gitignore  GITHUB_SETUP.md  README.md  push_to_github.sh  pyproject.toml  run_domain_alignment.py  run_feature_fusion_experiments.py
config/: domain_alignment_config.yaml  ngram_experiment_config.yaml
src/: __init__.py  utils.py
src/models/: __init__.py  char_ngram_experiments.py  clustering_features.py  domain_alignment.py  domain_classifier.py  experiment_runner.py  feature_fusion_experiments.py  lda_trainer.py  ngram_experiments.py  phrase_experiments.py  sklearn_baseline.py  unified_evaluation.py
src/preprocess/: __init__.py  clean_programs.py  clean_text.py  dedupe.py  pipeline.py  preprocess_jobs.py  segment.py  stats.py  stopwords.py  tfidf.py  tokenize_text.py
